objects/CCW_Urls__c.object
<CustomObject>
    <fields>
        <fullName>PSR_PSS_Link__c</fullName>
        <description>PSS Link on PSR Lookup</description>
        <label>PSR PSS Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>createDealUrl__c</fullName>
        <description>Url to CCW Initiate Deal page</description>
        <label>createDealUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>viewDealUrl__c</fullName>
        <description>Link to CCW View All Deal page</description>
        <label>viewDealUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>CCW_Urls</label>
</CustomObject>